Update project to minecraft version 1.18.2